corpus/c/syntax/case-12/snapshots/gcc13_14/native_text_capture/render.default.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: [syntax] expected ‘)’ before ‘{’ token
src/main.c: In function ‘broken_if’:
    2 |     if (1 {
      |        ~ ^~
      |          )
want: ) @ src/main.c:2:10
near: { token
| src/main.c:2:10
|     if (1 {
|          ^

error: [syntax] expected expression before ‘}’ token
    6 | }
      | ^ @ src/main.c:6:1
want: expression
near: } token
| src/main.c:6:1
| }
| ^

error: [compiler.residual] invalid operands to binary + (have ‘int *’ and ‘char *’)
src/main.c: In function ‘broken_type’:
   10 |     return ptr + "x";
      |                ^
      |                |
      |                char *
note: wrapper confidence is low; verify against the preserved raw diagnostics
raw : src/main.c:10:16: error: invalid operands to binary + (have ‘int *’ and ‘char *’) @ src/main.c:10:16
| src/main.c:10:16
|     return ptr + "x";
|                ^